parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    TEXT

Grammar

Rule 0     S' -> sentencias
Rule 1     sentencias -> sentencia
Rule 2     sentencias -> sentencia sentencias
Rule 3     sentencia -> def_variable
Rule 4     sentencia -> put_variable
Rule 5     sentencia -> add_variable
Rule 6     sentencia -> continue_up
Rule 7     sentencia -> continue_down
Rule 8     sentencia -> continue_right
Rule 9     sentencia -> continue_left
Rule 10    sentencia -> pos
Rule 11    sentencia -> posx
Rule 12    sentencia -> posy
Rule 13    sentencia -> use_color
Rule 14    sentencia -> down
Rule 15    sentencia -> up
Rule 16    sentencia -> beginning
Rule 17    sentencia -> for_loop
Rule 18    sentencia -> case
Rule 19    sentencia -> repeat_until
Rule 20    sentencia -> while
Rule 21    sentencia -> equal
Rule 22    sentencia -> and
Rule 23    sentencia -> or
Rule 24    sentencia -> greater
Rule 25    sentencia -> smaller
Rule 26    sentencia -> substr
Rule 27    sentencia -> random
Rule 28    sentencia -> mult
Rule 29    sentencia -> div
Rule 30    sentencia -> sum
Rule 31    sentencia -> proc
Rule 32    sentencia -> invocacion_proc
Rule 33    def_variable -> DEF PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
Rule 34    put_variable -> PUT PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
Rule 35    add_variable -> ADD PARIZQ VARIABLE PARDER PUNTOCOMA
Rule 36    add_variable -> ADD PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
Rule 37    continue_up -> CONUP valor PUNTOCOMA
Rule 38    continue_down -> CONDOWN valor PUNTOCOMA
Rule 39    continue_right -> CONRIGHT valor PUNTOCOMA
Rule 40    continue_left -> CONLEFT valor PUNTOCOMA
Rule 41    pos -> POS PARIZQ valor COMA valor PARDER PUNTOCOMA
Rule 42    posx -> POSX valor PUNTOCOMA
Rule 43    posy -> POSY valor PUNTOCOMA
Rule 44    use_color -> USECOLOR valor PUNTOCOMA
Rule 45    down -> DOWN PUNTOCOMA
Rule 46    up -> UP PUNTOCOMA
Rule 47    beginning -> BEGIN PUNTOCOMA
Rule 48    for_loop -> FOR VARIABLE PARIZQ valor TO valor PARDER LOOP BRAIZQ sentencias BRADER END LOOP PUNTOCOMA
Rule 49    case -> CASE VARIABLE when_cases end_case
Rule 50    when_cases -> when_cases when_case
Rule 51    when_cases -> when_case
Rule 52    when_case -> WHEN valor THEN BRAIZQ sentencias BRADER
Rule 53    end_case -> ELSE BRAIZQ sentencias BRADER END CASE PUNTOCOMA
Rule 54    end_case -> END CASE PUNTOCOMA
Rule 55    repeat_until -> REPEAT BRAIZQ sentencias BRADER UNTIL BRAIZQ condicion BRADER PUNTOCOMA
Rule 56    while -> WHILE PARIZQ condicion PARDER BRAIZQ sentencias BRADER WHEND PUNTOCOMA
Rule 57    equal -> EQUAL PARIZQ valor COMA valor PARDER
Rule 58    and -> AND PARIZQ valor COMA valor PARDER
Rule 59    or -> OR PARIZQ valor COMA valor PARDER
Rule 60    greater -> GREATER PARIZQ valor COMA valor PARDER
Rule 61    smaller -> SMALLER PARIZQ valor COMA valor PARDER
Rule 62    substr -> SUBSTR PARIZQ valor COMA valor PARDER
Rule 63    random -> RANDOM PARIZQ valor PARDER
Rule 64    mult -> MULT PARIZQ valor COMA valor PARDER
Rule 65    div -> DIV PARIZQ valor COMA valor PARDER
Rule 66    sum -> SUM PARIZQ valor COMA valor PARDER
Rule 67    proc -> PROC VARIABLE PARIZQ lista_parametros PARDER BRAIZQ sentencias BRADER PUNTOCOMA END PUNTOCOMA
Rule 68    proc -> PROC VARIABLE PARIZQ PARDER BRAIZQ sentencias BRADER PUNTOCOMA END PUNTOCOMA
Rule 69    lista_parametros -> VARIABLE
Rule 70    lista_parametros -> VARIABLE COMA lista_parametros
Rule 71    invocacion_proc -> VARIABLE PARIZQ lista_argumentos PARDER PUNTOCOMA
Rule 72    invocacion_proc -> VARIABLE PARIZQ PARDER PUNTOCOMA
Rule 73    lista_argumentos -> valor
Rule 74    lista_argumentos -> valor COMA lista_argumentos
Rule 75    valor -> NUMBER
Rule 76    valor -> VARIABLE
Rule 77    valor -> expr
Rule 78    valor -> TRUE
Rule 79    valor -> FALSE
Rule 80    expr -> ADD PARIZQ VARIABLE PARDER
Rule 81    expr -> ADD PARIZQ VARIABLE COMA valor PARDER
Rule 82    expr -> valor OP_MULT valor
Rule 83    expr -> valor OP_DIV valor
Rule 84    expr -> valor OP_SUM valor
Rule 85    expr -> valor OP_SUB valor
Rule 86    expr -> substr
Rule 87    expr -> random
Rule 88    expr -> mult
Rule 89    expr -> div
Rule 90    expr -> sum
Rule 91    condicion -> valor OP_EQUAL valor
Rule 92    condicion -> valor OP_GREATER valor
Rule 93    condicion -> valor OP_SMALLER valor
Rule 94    condicion -> valor OP_AND valor
Rule 95    condicion -> valor OP_OR valor
Rule 96    condicion -> equal
Rule 97    condicion -> greater
Rule 98    condicion -> smaller
Rule 99    condicion -> and
Rule 100   condicion -> or

Terminals, with rules where they appear

ADD                  : 35 36 80 81
AND                  : 58
BEGIN                : 47
BRADER               : 48 52 53 55 55 56 67 68
BRAIZQ               : 48 52 53 55 55 56 67 68
CASE                 : 49 53 54
COMA                 : 33 34 36 41 57 58 59 60 61 62 64 65 66 70 74 81
COMMENT              : 
CONDOWN              : 38
CONLEFT              : 40
CONRIGHT             : 39
CONUP                : 37
DEF                  : 33
DIV                  : 65
DOWN                 : 45
ELSE                 : 53
END                  : 48 53 54 67 68
EQUAL                : 57
FALSE                : 79
FOR                  : 48
GREATER              : 60
LOOP                 : 48 48
MULT                 : 64
NUMBER               : 75
OP_AND               : 94
OP_DIV               : 83
OP_EQUAL             : 91
OP_GREATER           : 92
OP_MULT              : 82
OP_OR                : 95
OP_SMALLER           : 93
OP_SUB               : 85
OP_SUM               : 84
OR                   : 59
PARDER               : 33 34 35 36 41 48 56 57 58 59 60 61 62 63 64 65 66 67 68 71 72 80 81
PARIZQ               : 33 34 35 36 41 48 56 57 58 59 60 61 62 63 64 65 66 67 68 71 72 80 81
POS                  : 41
POSX                 : 42
POSY                 : 43
PROC                 : 67 68
PUNTOCOMA            : 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 53 54 55 56 67 67 68 68 71 72
PUT                  : 34
RANDOM               : 63
REPEAT               : 55
SMALLER              : 61
SUBSTR               : 62
SUM                  : 66
TEXT                 : 
THEN                 : 52
TO                   : 48
TRUE                 : 78
UNTIL                : 55
UP                   : 46
USECOLOR             : 44
VARIABLE             : 33 34 35 36 48 49 67 68 69 70 71 72 76 80 81
WHEN                 : 52
WHEND                : 56
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

add_variable         : 5
and                  : 22 99
beginning            : 16
case                 : 18
condicion            : 55 56
continue_down        : 7
continue_left        : 9
continue_right       : 8
continue_up          : 6
def_variable         : 3
div                  : 29 89
down                 : 14
end_case             : 49
equal                : 21 96
expr                 : 77
for_loop             : 17
greater              : 24 97
invocacion_proc      : 32
lista_argumentos     : 71 74
lista_parametros     : 67 70
mult                 : 28 88
or                   : 23 100
pos                  : 10
posx                 : 11
posy                 : 12
proc                 : 31
put_variable         : 4
random               : 27 87
repeat_until         : 19
sentencia            : 1 2
sentencias           : 2 48 52 53 55 56 67 68 0
smaller              : 25 98
substr               : 26 86
sum                  : 30 90
up                   : 15
use_color            : 13
valor                : 33 34 36 37 38 39 40 41 41 42 43 44 48 48 52 57 57 58 58 59 59 60 60 61 61 62 62 63 64 64 65 65 66 66 73 74 81 82 82 83 83 84 84 85 85 91 91 92 92 93 93 94 94 95 95
when_case            : 50 51
when_cases           : 49 50
while                : 20

Parsing method: LALR

state 0

    (0) S' -> . sentencias
    (1) sentencias -> . sentencia
    (2) sentencias -> . sentencia sentencias
    (3) sentencia -> . def_variable
    (4) sentencia -> . put_variable
    (5) sentencia -> . add_variable
    (6) sentencia -> . continue_up
    (7) sentencia -> . continue_down
    (8) sentencia -> . continue_right
    (9) sentencia -> . continue_left
    (10) sentencia -> . pos
    (11) sentencia -> . posx
    (12) sentencia -> . posy
    (13) sentencia -> . use_color
    (14) sentencia -> . down
    (15) sentencia -> . up
    (16) sentencia -> . beginning
    (17) sentencia -> . for_loop
    (18) sentencia -> . case
    (19) sentencia -> . repeat_until
    (20) sentencia -> . while
    (21) sentencia -> . equal
    (22) sentencia -> . and
    (23) sentencia -> . or
    (24) sentencia -> . greater
    (25) sentencia -> . smaller
    (26) sentencia -> . substr
    (27) sentencia -> . random
    (28) sentencia -> . mult
    (29) sentencia -> . div
    (30) sentencia -> . sum
    (31) sentencia -> . proc
    (32) sentencia -> . invocacion_proc
    (33) def_variable -> . DEF PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
    (34) put_variable -> . PUT PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
    (35) add_variable -> . ADD PARIZQ VARIABLE PARDER PUNTOCOMA
    (36) add_variable -> . ADD PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
    (37) continue_up -> . CONUP valor PUNTOCOMA
    (38) continue_down -> . CONDOWN valor PUNTOCOMA
    (39) continue_right -> . CONRIGHT valor PUNTOCOMA
    (40) continue_left -> . CONLEFT valor PUNTOCOMA
    (41) pos -> . POS PARIZQ valor COMA valor PARDER PUNTOCOMA
    (42) posx -> . POSX valor PUNTOCOMA
    (43) posy -> . POSY valor PUNTOCOMA
    (44) use_color -> . USECOLOR valor PUNTOCOMA
    (45) down -> . DOWN PUNTOCOMA
    (46) up -> . UP PUNTOCOMA
    (47) beginning -> . BEGIN PUNTOCOMA
    (48) for_loop -> . FOR VARIABLE PARIZQ valor TO valor PARDER LOOP BRAIZQ sentencias BRADER END LOOP PUNTOCOMA
    (49) case -> . CASE VARIABLE when_cases end_case
    (55) repeat_until -> . REPEAT BRAIZQ sentencias BRADER UNTIL BRAIZQ condicion BRADER PUNTOCOMA
    (56) while -> . WHILE PARIZQ condicion PARDER BRAIZQ sentencias BRADER WHEND PUNTOCOMA
    (57) equal -> . EQUAL PARIZQ valor COMA valor PARDER
    (58) and -> . AND PARIZQ valor COMA valor PARDER
    (59) or -> . OR PARIZQ valor COMA valor PARDER
    (60) greater -> . GREATER PARIZQ valor COMA valor PARDER
    (61) smaller -> . SMALLER PARIZQ valor COMA valor PARDER
    (62) substr -> . SUBSTR PARIZQ valor COMA valor PARDER
    (63) random -> . RANDOM PARIZQ valor PARDER
    (64) mult -> . MULT PARIZQ valor COMA valor PARDER
    (65) div -> . DIV PARIZQ valor COMA valor PARDER
    (66) sum -> . SUM PARIZQ valor COMA valor PARDER
    (67) proc -> . PROC VARIABLE PARIZQ lista_parametros PARDER BRAIZQ sentencias BRADER PUNTOCOMA END PUNTOCOMA
    (68) proc -> . PROC VARIABLE PARIZQ PARDER BRAIZQ sentencias BRADER PUNTOCOMA END PUNTOCOMA
    (71) invocacion_proc -> . VARIABLE PARIZQ lista_argumentos PARDER PUNTOCOMA
    (72) invocacion_proc -> . VARIABLE PARIZQ PARDER PUNTOCOMA

    DEF             shift and go to state 33
    PUT             shift and go to state 35
    ADD             shift and go to state 36
    CONUP           shift and go to state 37
    CONDOWN         shift and go to state 38
    CONRIGHT        shift and go to state 39
    CONLEFT         shift and go to state 40
    POS             shift and go to state 41
    POSX            shift and go to state 42
    POSY            shift and go to state 43
    USECOLOR        shift and go to state 44
    DOWN            shift and go to state 45
    UP              shift and go to state 46
    BEGIN           shift and go to state 47
    FOR             shift and go to state 48
    CASE            shift and go to state 49
    REPEAT          shift and go to state 50
    WHILE           shift and go to state 51
    EQUAL           shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    GREATER         shift and go to state 55
    SMALLER         shift and go to state 56
    SUBSTR          shift and go to state 57
    RANDOM          shift and go to state 58
    MULT            shift and go to state 59
    DIV             shift and go to state 60
    SUM             shift and go to state 61
    PROC            shift and go to state 62
    VARIABLE        shift and go to state 34

    sentencias                     shift and go to state 1
    sentencia                      shift and go to state 2
    def_variable                   shift and go to state 3
    put_variable                   shift and go to state 4
    add_variable                   shift and go to state 5
    continue_up                    shift and go to state 6
    continue_down                  shift and go to state 7
    continue_right                 shift and go to state 8
    continue_left                  shift and go to state 9
    pos                            shift and go to state 10
    posx                           shift and go to state 11
    posy                           shift and go to state 12
    use_color                      shift and go to state 13
    down                           shift and go to state 14
    up                             shift and go to state 15
    beginning                      shift and go to state 16
    for_loop                       shift and go to state 17
    case                           shift and go to state 18
    repeat_until                   shift and go to state 19
    while                          shift and go to state 20
    equal                          shift and go to state 21
    and                            shift and go to state 22
    or                             shift and go to state 23
    greater                        shift and go to state 24
    smaller                        shift and go to state 25
    substr                         shift and go to state 26
    random                         shift and go to state 27
    mult                           shift and go to state 28
    div                            shift and go to state 29
    sum                            shift and go to state 30
    proc                           shift and go to state 31
    invocacion_proc                shift and go to state 32

state 1

    (0) S' -> sentencias .



state 2

    (1) sentencias -> sentencia .
    (2) sentencias -> sentencia . sentencias
    (1) sentencias -> . sentencia
    (2) sentencias -> . sentencia sentencias
    (3) sentencia -> . def_variable
    (4) sentencia -> . put_variable
    (5) sentencia -> . add_variable
    (6) sentencia -> . continue_up
    (7) sentencia -> . continue_down
    (8) sentencia -> . continue_right
    (9) sentencia -> . continue_left
    (10) sentencia -> . pos
    (11) sentencia -> . posx
    (12) sentencia -> . posy
    (13) sentencia -> . use_color
    (14) sentencia -> . down
    (15) sentencia -> . up
    (16) sentencia -> . beginning
    (17) sentencia -> . for_loop
    (18) sentencia -> . case
    (19) sentencia -> . repeat_until
    (20) sentencia -> . while
    (21) sentencia -> . equal
    (22) sentencia -> . and
    (23) sentencia -> . or
    (24) sentencia -> . greater
    (25) sentencia -> . smaller
    (26) sentencia -> . substr
    (27) sentencia -> . random
    (28) sentencia -> . mult
    (29) sentencia -> . div
    (30) sentencia -> . sum
    (31) sentencia -> . proc
    (32) sentencia -> . invocacion_proc
    (33) def_variable -> . DEF PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
    (34) put_variable -> . PUT PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
    (35) add_variable -> . ADD PARIZQ VARIABLE PARDER PUNTOCOMA
    (36) add_variable -> . ADD PARIZQ VARIABLE COMA valor PARDER PUNTOCOMA
    (37) continue_up -> . CONUP valor PUNTOCOMA
    (38) continue_down -> . CONDOWN valor PUNTOCOMA
    (39) continue_right -> . CONRIGHT valor PUNTOCOMA
    (40) continue_left -> . CONLEFT valor PUNTOCOMA
    (41) pos -> . POS PARIZQ valor COMA valor PARDER PUNTOCOMA
    (42) posx -> . POSX valor PUNTOCOMA
    (43) posy -> . POSY valor PUNTOCOMA
    (44) use_color -> . USECOLOR valor PUNTOCOMA
    (45) down -> . DOWN PUNTOCOMA
    (46) up -> . UP PUNTOCOMA
    (47) beginning -> . BEGIN PUNTOCOMA
    (48) for_loop -> . FOR VARIABLE PARIZQ valor TO valor PARDER LOOP BRAIZQ sentencias BRADER END LOOP PUNTOCOMA
    (49) case -> . CASE VARIABLE when_cases end_case
    (55) repeat_until -> . REPEAT BRAIZQ sentencias BRADER UNTIL BRAIZQ condicion BRADER PUNTOCOMA
    (56) while -> . WHILE PARIZQ condicion PARDER BRAIZQ sentencias BRADER WHEND PUNTOCOMA
    (57) equal -> . EQUAL PARIZQ valor COMA valor PARDER
    (58) and -> . AND PARIZQ valor COMA valor PARDER
    (59) or -> . OR PARIZQ valor COMA valor PARDER
    (60) greater -> . GREATER PARIZQ valor COMA valor PARDER
    (61) smaller -> . SMALLER PARIZQ valor COMA valor PARDER
    (62) substr -> . SUBSTR PARIZQ valor COMA valor PARDER
    (63) random -> . RANDOM PARIZQ valor PARDER
    (64) mult -> . MULT PARIZQ valor COMA valor PARDER
    (65) div -> . DIV PARIZQ valor COMA valor PARDER
    (66) sum -> . SUM PARIZQ valor COMA valor PARDER
    (67) proc -> . PROC VARIABLE PARIZQ lista_parametros PARDER BRAIZQ sentencias BRADER PUNTOCOMA END PUNTOCOMA
    (68) proc -> . PROC VARIABLE PARIZQ PARDER BRAIZQ sentencias BRADER PUNTOCOMA END PUNTOCOMA
    (71) invocacion_proc -> . VARIABLE PARIZQ lista_argumentos PARDER PUNTOCOMA
    (72) invocacion_proc -> . VARIABLE PARIZQ PARDER PUNTOCOMA

    $end            reduce using rule 1 (sentencias -> sentencia .)
    BRADER          reduce using rule 1 (sentencias -> sentencia .)
    DEF             shift and go to state 33
    PUT             shift and go to state 35
    ADD             shift and go to state 36
    CONUP           shift and go to state 37
    CONDOWN         shift and go to state 38
    CONRIGHT        shift and go to state 39
    CONLEFT         shift and go to state 40
    POS             shift and go to state 41
    POSX            shift and go to state 42
    POSY            shift and go to state 43
    USECOLOR        shift and go to state 44
    DOWN            shift and go to state 45
    UP              shift and go to state 46
    BEGIN           shift and go to state 47
    FOR             shift and go to state 48
    CASE            shift and go to state 49
    REPEAT          shift and go to state 50
    WHILE           shift and go to state 51
    EQUAL           shift and go to state 52
    AND             shift and go to state 53
    OR              shift and go to state 54
    GREATER         shift and go to state 55
    SMALLER         shift and go to state 56
    SUBSTR          shift and go to state 57
    RANDOM          shift and go to state 58
    MULT            shift and go to state 59
    DIV             shift and go to state 60
    SUM             shift and go to state 61
    PROC            shift and go to state 62
    VARIABLE        shift and go to state 34

    sentencia                      shift and go to state 2
    sentencias                     shift and go to state 63
    def_variable                   shift and go to state 3
    put_variable                   shift and go to state 4
    add_variable                   shift and go to state 5
    continue_up                    shift and go to state 6
    continue_down                  shift and go to state 7
    continue_right                 shift and go to state 8
    continue_left                  shift and go to state 9
    pos                            shift and go to state 10
    posx                           shift and go to state 11
    posy                           shift and go to state 12
    use_color                      shift and go to state 13
    down                           shift and go to state 14
    up                             shift and go to state 15
    beginning                      shift and go to state 16
    for_loop                       shift and go to state 17
    case                           shift and go to state 18
    repeat_until                   shift and go to state 19
    while                          shift and go to state 20
    equal                          shift and go to state 21
    and                            shift and go to state 22
    or                             shift and go to state 23
    greater                        shift and go to state 24
    smaller                        shift and go to state 25
    substr                         shift and go to state 26
    random                         shift and go to state 27
    mult                           shift and go to state 28
    div                            shift and go to state 29
    sum                            shift and go to state 30
    proc                           shift and go to state 31
    invocacion_proc                shift and go to state 32

state 3

    (3) sentencia -> def_variable .

    DEF             reduce using rule 3 (sentencia -> def_variable .)
    PUT             reduce using rule 3 (sentencia -> def_variable .)
    ADD             reduce using rule 3 (sentencia -> def_variable .)
    CONUP           reduce using rule 3 (sentencia -> def_variable .)
    CONDOWN         reduce using rule 3 (sentencia -> def_variable .)
    CONRIGHT        reduce using rule 3 (sentencia -> def_variable .)
    CONLEFT         reduce using rule 3 (sentencia -> def_variable .)
    POS             reduce using rule 3 (sentencia -> def_variable .)
    POSX            reduce using rule 3 (sentencia -> def_variable .)
    POSY            reduce using rule 3 (sentencia -> def_variable .)
    USECOLOR        reduce using rule 3 (sentencia -> def_variable .)
    DOWN            reduce using rule 3 (sentencia -> def_variable .)
    UP              reduce using rule 3 (sentencia -> def_variable .)
    BEGIN           reduce using rule 3 (sentencia -> def_variable .)
    FOR             reduce using rule 3 (sentencia -> def_variable .)
    CASE            reduce using rule 3 (sentencia -> def_variable .)
    REPEAT          reduce using rule 3 (sentencia -> def_variable .)
    WHILE           reduce using rule 3 (sentencia -> def_variable .)
    EQUAL           reduce using rule 3 (sentencia -> def_variable .)
    AND             reduce using rule 3 (sentencia -> def_variable .)
    OR              reduce using rule 3 (sentencia -> def_variable .)
    GREATER         reduce using rule 3 (sentencia -> def_variable .)
    SMALLER         reduce using rule 3 (sentencia -> def_variable .)
    SUBSTR          reduce using rule 3 (sentencia -> def_variable .)
    RANDOM          reduce using rule 3 (sentencia -> def_variable .)
    MULT            reduce using rule 3 (sentencia -> def_variable .)
    DIV             reduce using rule 3 (sentencia -> def_variable .)
    SUM             reduce using rule 3 (sentencia -> def_variable .)
    PROC            reduce using rule 3 (sentencia -> def_variable .)
    VARIABLE        reduce using rule 3 (sentencia -> def_variable .)
    $end            reduce using rule 3 (sentencia -> def_variable .)
    BRADER          reduce using rule 3 (sentencia -> def_variable .)


state 4

    (4) sentencia -> put_variable .

    DEF             reduce using rule 4 (sentencia -> put_variable .)
    PUT             reduce using rule 4 (sentencia -> put_variable .)
    ADD             reduce using rule 4 (sentencia -> put_variable .)
    CONUP           reduce using rule 4 (sentencia -> put_variable .)
    CONDOWN         reduce using rule 4 (sentencia -> put_variable .)
    CONRIGHT        reduce using rule 4 (sentencia -> put_variable .)
    CONLEFT         reduce using rule 4 (sentencia -> put_variable .)
    POS             reduce using rule 4 (sentencia -> put_variable .)
    POSX            reduce using rule 4 (sentencia -> put_variable .)
    POSY            reduce using rule 4 (sentencia -> put_variable .)
    USECOLOR        reduce using rule 4 (sentencia -> put_variable .)
    DOWN            reduce using rule 4 (sentencia -> put_variable .)
    UP              reduce using rule 4 (sentencia -> put_variable .)
    BEGIN           reduce using rule 4 (sentencia -> put_variable .)
    FOR             reduce using rule 4 (sentencia -> put_variable .)
    CASE            reduce using rule 4 (sentencia -> put_variable .)
    REPEAT          reduce using rule 4 (sentencia -> put_variable .)
    WHILE           reduce using rule 4 (sentencia -> put_variable .)
    EQUAL           reduce using rule 4 (sentencia -> put_variable .)
    AND             reduce using rule 4 (sentencia -> put_variable .)
    OR              reduce using rule 4 (sentencia -> put_variable .)
    GREATER         reduce using rule 4 (sentencia -> put_variable .)
    SMALLER         reduce using rule 4 (sentencia -> put_variable .)
    SUBSTR          reduce using rule 4 (sentencia -> put_variable .)
    RANDOM          reduce using rule 4 (sentencia -> put_variable .)
    MULT            reduce using rule 4 (sentencia -> put_variable .)
    DIV             reduce using rule 4 (sentencia -> put_variable .)
    SUM             reduce using rule 4 (sentencia -> put_variable .)
    PROC            reduce using rule 4 (sentencia -> put_variable .)
    VARIABLE        reduce using rule 4 (sentencia -> put_variable .)
    $end            reduce using rule 4 (sentencia -> put_variable .)
    BRADER          reduce using rule 4 (sentencia -> put_variable .)


state 5

    (5) sentencia -> add_variable .

    DEF             reduce using rule 5 (sentencia -> add_variable .)
    PUT             reduce using rule 5 (sentencia -> add_variable .)
    ADD             reduce using rule 5 (sentencia -> add_variable .)
    CONUP           reduce using rule 5 (sentencia -> add_variable .)
    CONDOWN         reduce using rule 5 (sentencia -> add_variable .)
    CONRIGHT        reduce using rule 5 (sentencia -> add_variable .)
    CONLEFT         reduce using rule 5 (sentencia -> add_variable .)
    POS             reduce using rule 5 (sentencia -> add_variable .)
    POSX            reduce using rule 5 (sentencia -> add_variable .)
    POSY            reduce using rule 5 (sentencia -> add_variable .)
    USECOLOR        reduce using rule 5 (sentencia -> add_variable .)
    DOWN            reduce using rule 5 (sentencia -> add_variable .)
    UP              reduce using rule 5 (sentencia -> add_variable .)
    BEGIN           reduce using rule 5 (sentencia -> add_variable .)
    FOR             reduce using rule 5 (sentencia -> add_variable .)
    CASE            reduce using rule 5 (sentencia -> add_variable .)
    REPEAT          reduce using rule 5 (sentencia -> add_variable .)
    WHILE           reduce using rule 5 (sentencia -> add_variable .)
    EQUAL           reduce using rule 5 (sentencia -> add_variable .)
    AND             reduce using rule 5 (sentencia -> add_variable .)
    OR              reduce using rule 5 (sentencia -> add_variable .)
    GREATER         reduce using rule 5 (sentencia -> add_variable .)
    SMALLER         reduce using rule 5 (sentencia -> add_variable .)
    SUBSTR          reduce using rule 5 (sentencia -> add_variable .)
    RANDOM          reduce using rule 5 (sentencia -> add_variable .)
    MULT            reduce using rule 5 (sentencia -> add_variable .)
    DIV             reduce using rule 5 (sentencia -> add_variable .)
    SUM             reduce using rule 5 (sentencia -> add_variable .)
    PROC            reduce using rule 5 (sentencia -> add_variable .)
    VARIABLE        reduce using rule 5 (sentencia -> add_variable .)
    $end            reduce using rule 5 (sentencia -> add_variable .)
    BRADER          reduce using rule 5 (sentencia -> add_variable .)


state 6

    (6) sentencia -> continue_up .

    DEF             reduce using rule 6 (sentencia -> continue_up .)
    PUT             reduce using rule 6 (sentencia -> continue_up .)
    ADD             reduce using rule 6 (sentencia -> continue_up .)
    CONUP           reduce using rule 6 (sentencia -> continue_up .)
    CONDOWN         reduce using rule 6 (sentencia -> continue_up .)
    CONRIGHT        reduce using rule 6 (sentencia -> continue_up .)
    CONLEFT         reduce using rule 6 (sentencia -> continue_up .)
    POS             reduce using rule 6 (sentencia -> continue_up .)
    POSX            reduce using rule 6 (sentencia -> continue_up .)
    POSY            reduce using rule 6 (sentencia -> continue_up .)
    USECOLOR        reduce using rule 6 (sentencia -> continue_up .)
    DOWN            reduce using rule 6 (sentencia -> continue_up .)
    UP              reduce using rule 6 (sentencia -> continue_up .)
    BEGIN           reduce using rule 6 (sentencia -> continue_up .)
    FOR             reduce using rule 6 (sentencia -> continue_up .)
    CASE            reduce using rule 6 (sentencia -> continue_up .)
    REPEAT          reduce using rule 6 (sentencia -> continue_up .)
    WHILE           reduce using rule 6 (sentencia -> continue_up .)
    EQUAL           reduce using rule 6 (sentencia -> continue_up .)
    AND             reduce using rule 6 (sentencia -> continue_up .)
    OR              reduce using rule 6 (sentencia -> continue_up .)
    GREATER         reduce using rule 6 (sentencia -> continue_up .)
    SMALLER         reduce using rule 6 (sentencia -> continue_up .)
    SUBSTR          reduce using rule 6 (sentencia -> continue_up .)
    RANDOM          reduce using rule 6 (sentencia -> continue_up .)
    MULT            reduce using rule 6 (sentencia -> continue_up .)
    DIV             reduce using rule 6 (sentencia -> continue_up .)
    SUM             reduce using rule 6 (sentencia -> continue_up .)
    PROC            reduce using rule 6 (sentencia -> continue_up .)
    VARIABLE        reduce using rule 6 (sentencia -> continue_up .)
    $end            reduce using rule 6 (sentencia -> continue_up .)
    BRADER          reduce using rule 6 (sentencia -> continue_up .)


state 7

    (7) sentencia -> continue_down .

    DEF             reduce using rule 7 (sentencia -> continue_down .)
    PUT             reduce using rule 7 (sentencia -> continue_down .)
    ADD             reduce using rule 7 (sentencia -> continue_down .)
    CONUP           reduce using rule 7 (sentencia -> continue_down .)
    CONDOWN         reduce using rule 7 (sentencia -> continue_down .)
    CONRIGHT        reduce using rule 7 (sentencia -> continue_down .)
    CONLEFT         reduce using rule 7 (sentencia -> continue_down .)
    POS             reduce using rule 7 (sentencia -> continue_down .)
    POSX            reduce using rule 7 (sentencia -> continue_down .)
    POSY            reduce using rule 7 (sentencia -> continue_down .)
    USECOLOR        reduce using rule 7 (sentencia -> continue_down .)
    DOWN            reduce using rule 7 (sentencia -> continue_down .)
    UP              reduce using rule 7 (sentencia -> continue_down .)
    BEGIN           reduce using rule 7 (sentencia -> continue_down .)
    FOR             reduce using rule 7 (sentencia -> continue_down .)
    CASE            reduce using rule 7 (sentencia -> continue_down .)
    REPEAT          reduce using rule 7 (sentencia -> continue_down .)
    WHILE           reduce using rule 7 (sentencia -> continue_down .)
    EQUAL           reduce using rule 7 (sentencia -> continue_down .)
    AND             reduce using rule 7 (sentencia -> continue_down .)
    OR              reduce using rule 7 (sentencia -> continue_down .)
    GREATER         reduce using rule 7 (sentencia -> continue_down .)
    SMALLER         reduce using rule 7 (sentencia -> continue_down .)
    SUBSTR          reduce using rule 7 (sentencia -> continue_down .)
    RANDOM          reduce using rule 7 (sentencia -> continue_down .)
    MULT            reduce using rule 7 (sentencia -> continue_down .)
    DIV             reduce using rule 7 (sentencia -> continue_down .)
    SUM             reduce using rule 7 (sentencia -> continue_down .)
    PROC            reduce using rule 7 (sentencia -> continue_down .)
    VARIABLE        reduce using rule 7 (sentencia -> continue_down .)
    $end            reduce using rule 7 (sentencia -> continue_down .)
    BRADER          reduce using rule 7 (sentencia -> continue_down .)


state 8

    (8) sentencia -> continue_right .
